@@ -50,19 +50,6 @@
 		<docker.plugin.version>0.2.3</docker.plugin.version>
 
 		<!-- SonarQube properties -->
-		<!--<jacoco.version>0.8.5</jacoco.version>
-		<jacoco.outputDir>${project.build.directory}</jacoco.outputDir>
-		<jacoco.out.ut.file>jacoco-ut.exec</jacoco.out.ut.file>
-		<jacoco.out.it.file>jacoco-it.exec</jacoco.out.it.file>
-		<sonar.projectKey>${project.name}</sonar.projectKey>
-		<sonar.projectName>PCP Search Service</sonar.projectName>
-		<sonar.language>java</sonar.language>
-		<sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>
-		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
-		<sonar-jacoco-listeners.version>1.4</sonar-jacoco-listeners.version>
-		<sonar.jacoco.reportPath>${jacoco.outputDir}/${jacoco.out.ut.file}</sonar.jacoco.reportPath>
-		<sonar.surefire.reportsPath>target/surefire-reports</sonar.surefire.reportsPath>
-		<sonar.jacoco.itReportPath>${jacoco.outputDir}/${jacoco.out.it.file}</sonar.jacoco.itReportPath>-->
 
 		<jacoco.version>0.8.5</jacoco.version>
 		<sonar.projectKey>PCP-SEARCH-SERVICE</sonar.projectKey>
@@ -295,67 +282,6 @@
 		</dependency>
 
 		<!-- Testing Dependencies -->
-<!--		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>junit</groupId>
-					<artifactId>junit</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.junit.vintage</groupId>
-					<artifactId>junit-vintage-engine</artifactId>
-				</exclusion>
-				<exclusion>
-		            <groupId>com.vaadin.external.google</groupId>
-		            <artifactId>android-json</artifactId>
-		        </exclusion>
-			</exclusions>
-		</dependency>
-
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
-			<version>${junit.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-engine</artifactId>
-			<version>${junit.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.junit.platform</groupId>
-			<artifactId>junit-platform-commons</artifactId>
-			<version>${junit.platform.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.junit.platform</groupId>
-			<artifactId>junit-platform-engine</artifactId>
-			<version>${junit.platform.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.junit.platform</groupId>
-			<artifactId>junit-platform-launcher</artifactId>
-			<version>${junit.platform.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.vladmihalcea</groupId>
-		    <artifactId>hibernate-types-55</artifactId>
-		    <version>2.16.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.9.5</version>
-			<scope>test</scope>
-		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -448,12 +374,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-<!--				<configuration>
-					<arguments>
-						<argument>&#45;&#45;spring.profiles.active=mock</argument>
-					</arguments>
-					<mainClass>com.deltadental.pcp.search.application.App</mainClass>
-				</configuration>-->
 			</plugin>
 			<!-- Compiler plugin -->
 			<plugin>
@@ -466,7 +386,7 @@
 				</configuration>
 			</plugin>
 			<!-- Docker image creation -->
-<!--			<plugin>
+			<plugin>
 				<groupId>com.spotify</groupId>
 				<artifactId>docker-maven-plugin</artifactId>
 				<version>${docker.plugin.version}</version>
@@ -481,7 +401,7 @@
 						</resource>
 					</resources>
 				</configuration>
-			</plugin>-->
+			</plugin>
 			<!-- End Docker image creation -->
 
 			<plugin>
@@ -513,97 +433,10 @@
 				<version>3.6.0.1398</version>
 			</plugin>
 			<!-- Jacoco integration test plugin -->
-<!--
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>3.1.1</version>
-				<executions>
-					<execution>
-						<id>validate</id>
-						<phase>validate</phase>
-						<configuration>
-							<configLocation>delta-platform-checkstyle.xml</configLocation>
-							<encoding>UTF-8</encoding>
-							<consoleOutput>false</consoleOutput>
-							<failsOnError>false</failsOnError>
-							<skip>true</skip>
-						</configuration>
-						<goals>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			&lt;!&ndash; Surefire unit test plugin &ndash;&gt;
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<argLine>
-						&#45;&#45;illegal-access=permit
-					</argLine>
-					<properties>
-						<property>
-							<name>listener</name>
-							<value>org.sonar.java.jacoco.JUnitListener</value>
-						</property>
-					</properties>
-					<testFailureIgnore>true</testFailureIgnore>
-				</configuration>
-			</plugin>
-			&lt;!&ndash; Failsafe integration test plugin &ndash;&gt;
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<configuration>
-					<argLine>&#45;&#45;illegal-access=permit -Xmx1024m -XX:MaxPermSize=256m}</argLine>
-					<properties>
-						<property>
-							<name>listener</name>
-							<value>org.sonar.java.jacoco.JUnitListener</value>
-						</property>
-					</properties>
-					&lt;!&ndash; Put failsafe reports with surefire to have access to tests failures/success
-						reports in sonar &ndash;&gt;
-					<reportsDirectory>${project.build.directory}/surefire-reports
-					</reportsDirectory>
-				</configuration>
-			</plugin>-->
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.5</version>
-<!--				<executions>
-					&lt;!&ndash; Prepares a variable, jacoco.agent.ut.arg, that contains the info
-						to be passed to the JVM hosting the code being tested. &ndash;&gt;
-					<execution>
-						<id>prepare-ut-agent</id>
-						<phase>process-test-classes</phase>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-						<configuration>
-							<destFile>${sonar.jacoco.reportPath}</destFile>
-							<propertyName>jacoco.agent.ut.arg</propertyName>
-							<append>true</append>
-						</configuration>
-					</execution>
-					&lt;!&ndash; Prepares a variable, jacoco.agent.it.arg, that contains the info
-						to be passed to the JVM hosting the code being tested. &ndash;&gt;
-					<execution>
-						<id>prepare-it-agent</id>
-						<phase>pre-integration-test</phase>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-						<configuration>
-							<destFile>${sonar.jacoco.itReportPath}</destFile>
-							<propertyName>jacoco.agent.it.arg</propertyName>
-							<append>true</append>
-						</configuration>
-					</execution>
-				</executions>-->
 			</plugin>
 		</plugins>
 	</build>
@@ -654,193 +487,4 @@
 			</build>
 		</profile>
 	</profiles>
-<!--	<profiles>
-		<profile>
-			<id>codeQuality</id>
-			<build>
-				<plugins>
-					&lt;!&ndash; Checkstyle plugin &ndash;&gt;
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-checkstyle-plugin</artifactId>
-						<version>3.1.1</version>
-						<executions>
-							<execution>
-								<id>validate</id>
-								<phase>validate</phase>
-								<configuration>
-									<configLocation>delta-platform-checkstyle.xml</configLocation>
-									<encoding>UTF-8</encoding>
-									<consoleOutput>false</consoleOutput>
-									<failsOnError>false</failsOnError>
-									<skip>true</skip>
-								</configuration>
-								<goals>
-									<goal>check</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-
-					&lt;!&ndash; Surefire unit test plugin &ndash;&gt;
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.22.2</version>
-						<configuration>
-							<argLine>
-								&#45;&#45;illegal-access=permit
-							</argLine>
-							<properties>
-								<property>
-									<name>listener</name>
-									<value>org.sonar.java.jacoco.JUnitListener</value>
-								</property>
-							</properties>
-							<testFailureIgnore>true</testFailureIgnore>
-						</configuration>
-					</plugin>
-
-					&lt;!&ndash; Failsafe integration test plugin &ndash;&gt;
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<version>2.22.2</version>
-						<configuration>
-							<argLine>&#45;&#45;illegal-access=permit -Xmx1024m -XX:MaxPermSize=256m}</argLine>
-							<properties>
-								<property>
-									<name>listener</name>
-									<value>org.sonar.java.jacoco.JUnitListener</value>
-								</property>
-							</properties>
-							&lt;!&ndash; Put failsafe reports with surefire to have access to tests failures/success
-								reports in sonar &ndash;&gt;
-							<reportsDirectory>${project.build.directory}/surefire-reports
-							</reportsDirectory>
-						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.jacoco</groupId>
-						<artifactId>jacoco-maven-plugin</artifactId>
-						<version>0.8.5</version>
-						<executions>
-							&lt;!&ndash; Prepares a variable, jacoco.agent.ut.arg, that contains the info
-								to be passed to the JVM hosting the code being tested. &ndash;&gt;
-							<execution>
-								<id>prepare-ut-agent</id>
-								<phase>process-test-classes</phase>
-								<goals>
-									<goal>prepare-agent</goal>
-								</goals>
-								<configuration>
-									<destFile>${sonar.jacoco.reportPath}</destFile>
-									<propertyName>jacoco.agent.ut.arg</propertyName>
-									<append>true</append>
-								</configuration>
-							</execution>
-							&lt;!&ndash; Prepares a variable, jacoco.agent.it.arg, that contains the info
-								to be passed to the JVM hosting the code being tested. &ndash;&gt;
-							<execution>
-								<id>prepare-it-agent</id>
-								<phase>pre-integration-test</phase>
-								<goals>
-									<goal>prepare-agent</goal>
-								</goals>
-								<configuration>
-									<destFile>${sonar.jacoco.itReportPath}</destFile>
-									<propertyName>jacoco.agent.it.arg</propertyName>
-									<append>true</append>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-
-			<reporting>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-jxr-plugin</artifactId>
-						<version>3.0.0</version>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-checkstyle-plugin</artifactId>
-						<version>3.1.1</version>
-						<reportSets>
-							<reportSet>
-								<reports>
-									<report>checkstyleReport</report>
-								</reports>
-							</reportSet>
-						</reportSets>
-					</plugin>
-				</plugins>
-			</reporting>
-			<dependencies>
-				<dependency>
-					<groupId>org.sonarsource.java</groupId>
-					<artifactId>sonar-jacoco-listeners</artifactId>
-					<version>5.14.0.18788</version>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-		</profile>
-
-		&lt;!&ndash; Integraton tests &ndash;&gt;
-		<profile>
-			<id>run-its</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>build-helper-maven-plugin</artifactId>
-						<version>3.0.0</version>
-						<executions>
-							<execution>
-								<id>add-integration-test-sources</id>
-								<phase>generate-test-sources</phase>
-								<goals>
-									<goal>add-test-source</goal>
-								</goals>
-								<configuration>
-									<sources>
-										<source>src/e2e-test/java</source>
-									</sources>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>integration-test</id>
-								<phase>integration-test</phase>
-								<goals>
-									<goal>integration-test</goal>
-								</goals>
-								<configuration>
-									<includes>
-										<include>**/*IT.java</include>
-									</includes>
-								</configuration>
-							</execution>
-							<execution>
-								<id>verify</id>
-								<phase>verify</phase>
-								<goals>
-									<goal>verify</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-
-				</plugins>
-			</build>
-		</profile>
-	</profiles>-->
 </project>
